--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -6,7 +6,12 @@
     "pages/chooseLib/chooseLib",
     "pages/scanCode/scanCode",
     "pages/record/record",
-    "pages/open-data/open-data"
+    "pages/open-data/open-data",
+    "pages/custom-message/custom-message",
+    "pages/about/about",
+    "pages/share/share",
+    "pages/myRoute/myRoute",
+    "pages/detail/detail"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -36,5 +41,13 @@
         "selectedIconPath": "icon/me.png"
       }
     ]
+  },
+  "plugins": {
+    "myPlugin": 
+      {
+        "version":"1.0.6",
+        "provider": "wx5bc2ac602a747594"
+      }
   }
+
 }
